# meson_bug_pkgconf

./: run.sh
.github/workflows/: test.yaml
project_1/: main.c  meson.build  project_1.h
project_2/: main.c  meson.build
